--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.21.1",
     "big.js": "^6.1.1",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
     "near-api-js": "~0.36.3",
     "prop-types": "^15.7.2",
     "react": ">= 17.0.2",
